Avoid long URLs to break layout (on mobile)

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -54,3 +54,7 @@
   padding: 0;
   visibility: hidden;
 }
+
+body {
+  overflow-wrap: break-word;
+}
